# babblesynth

./: .gitignore  CMakeLists.txt  README.md  babblesynth.desktop  copy_runtime_deps.cmake
.github/workflows/: build-deploy-release.yml  build-linux.yml  build.yml  codeql-analysis.yml
cmake/: copy_runtime_deps.cmake  find_qt_root.cmake
cmake/packaging/: Linux.cmake  Windows.cmake
dictionaries/: english.xml
src/: .clang-format  CMakeLists.txt
src/babblesynth/: CMakeLists.txt  babblesynth.cpp  babblesynth.h  enumeration.h  fzero.h  parameter.h  parameter_holder.cpp  parameter_holder.h  resample.cpp  resample.h  spline.cpp  spline.h  utility.h  variable.cpp  variable.h  variable_plan.cpp  variable_plan.h
src/babblesynth/arma/: fit.cpp  fit.h  utils.cpp  utils.h
src/babblesynth/filter/: butterworth.cpp  butterworth.h  filters.h  formant_filter.cpp  formant_filter.h  lfilter.cpp  psosfilt.cpp  solve_roots.cpp  sos_filter.h  sosfilt.cpp  tf_filter.h  zpk2sos.cpp
src/babblesynth/generator/: noise.cpp  noise.h  source_generator.cpp  source_generator.h
src/babblesynth/source/: abstract_source.cpp  abstract_source.h  lf.cpp  lf.h
src/cli/: CMakeLists.txt  main.cpp
src/dr_libs/: dr_libs.cpp
src/fftw-3.3.10/kernel/: kalloc.c
src/gui/: CMakeLists.txt  app_state.cpp  app_state.h  app_window.cpp  app_window.h  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  audio_writer.cpp  audio_writer.h  chart_view.cpp  chart_view.h  clickable_label.cpp  clickable_label.h  filter_tracks.cpp  filter_tracks.h  main.cpp  source_parameters.cpp  source_parameters.h  source_plan.cpp  source_plan.h  source_plan_item.cpp  source_plan_item.h
src/gui/colorplot/: colorplot.h
src/gui/colorplot/coloraxis/: access_private.hpp  chartcoloraxisx.cpp  chartcoloraxisx_p.h  chartcoloraxisy.cpp  chartcoloraxisy_p.h  coloraxis.cpp  coloraxis_p.h  qcoloraxis.cpp  qcoloraxis.h  qcoloraxis_p.h
src/gui/colorplot/colorlineseries/: colorlinechartitem.cpp  colorlinechartitem_p.h  qcolorlineseries.cpp  qcolorlineseries.h  qcolorlineseries_p.h
src/gui/colorplot/colorxyseries/: colorxychart.cpp  colorxychart_p.h  qcolorxyseries.cpp  qcolorxyseries.h  qcolorxyseries_p.h
src/gui/colorplot/melvalueaxis/: chartmelvalueaxisx.cpp  chartmelvalueaxisx_p.h  chartmelvalueaxisy.cpp  chartmelvalueaxisy_p.h  melvalueaxis.cpp  melvalueaxis.h  melvalueaxis_p.h
src/gui/dictionaries/: dictionaries.qrc  english.xml
src/gui/icons/: appicon.rc  icons.qrc
src/gui/phonemes/: phoneme.cpp  phoneme.h  phoneme_dictionary.cpp  phoneme_dictionary.h  pole_zero.cpp  pole_zero.h  xmlwstr.cpp  xmlwstr.h
src/gui/qcustomplot/: qcustomplot.h
src/gui/translations/: babblesynth-gui_en_GB.ts
src/gui/voicefxtype/: animal_crossing.cpp  animal_crossing.h  frequency_scale.h  undertale.cpp  undertale.h  voicefxtype.h
src/gui/widgets/: app_window.cpp  app_window.h  clickable_label.cpp  clickable_label.h  phoneme_editor.cpp  phoneme_editor.h  source_parameters.cpp  source_parameters.h
src/gui/widgets/voicefxtype/: animal_crossing.cpp  animal_crossing.h  undertale.cpp  undertale.h
src/suanshu/: CMakeLists.txt  defs.h
src/suanshu/arima/: ARIMAModel.cpp  ARIMAModel.h  ARIMAXModel.cpp  ARMAFitting.h  ARMAModel.cpp  ARMAModel.h  ARMAXModel.cpp  ARMAXModel.h  arima_model.cpp  arima_model.h  arimax_model.cpp  arimax_model.h  arma_fitting.h  arma_model.cpp  arma_model.h  armax_model.cpp  armax_model.h
src/suanshu/arima/Fitting/: BurgYule.cpp  BurgYule.h  ConditionalSumOfSquares.cpp  ConditionalSumOfSquares.h
src/suanshu/arima/fitting/: conditional_sum_of_squares.cpp  conditional_sum_of_squares.h
src/suanshu/function/: Differentiation.h  FiniteDifference.cpp  FiniteDifference.h  Function.h  GradientFunction.cpp  HessianFunction.cpp  OrderedPairs.h  function.h
src/suanshu/integration/: Integrator.h  IterativeIntegrator.h  NewtonCotes.cpp  NewtonCotes.h  Riemann.cpp  Romberg.cpp  Romberg.h  Trapezoidal.cpp  integrator.h  iterative_integrator.h  newton_cotes.cpp  newton_cotes.h  riemann.cpp  riemann.h  simpson.cpp  simpson.h  trapezoidal.cpp  trapezoidal.h
src/suanshu/interpolation/: NevilleTable.cpp  NevilleTable.h
src/suanshu/optimization/problem/: C2OptimProblem.cpp  OptimProblem.h
src/suanshu/optimization/unconstrained/: NelderMead.cpp  NelderMead.h
