set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    set(CMAKE_CXX_FLAGS "-Wall -fno-math-errno")
    set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -g0 -flto -ftree-vectorize -DNDEBUG")
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
    set(CMAKE_CXX_FLAGS_DEBUG "-Og -g")

    include(CheckCXXCompilerFlag)
    check_cxx_compiler_flag("-fuse-ld=lld" use_lld)
    if(use_lld)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fuse-ld=lld")
    endif()
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "/EHsc")
    set(CMAKE_CXX_FLAGS_DEBUG "/MDd /Od")
    set(CMAKE_CXX_FLAGS_RELEASE "/MD /Ob2 /Oi /Os /Oy /DNDEBUG")
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MD /Ob2 /Oi /Os /Oy /DNDEBUG")
else()
    message(AUTHOR_WARNING "This compiler (${CMAKE_CXX_COMPILER_ID}) will use CMake's own default compile flags")
endif()

if(NOT DEFINED CMAKE_BUILD_TYPE)
    message(STATUS "CMAKE_BUILD_TYPE was not set: defaults to RelWithDebInfo")
    set(CMAKE_BUILD_TYPE RelWithDebInfo)
endif()

string(TOUPPER ${CMAKE_BUILD_TYPE} FLAGS_SUFFIX)
message(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS_${FLAGS_SUFFIX}} ${CMAKE_CXX_FLAGS}")

add_subdirectory(babblesynth)
add_subdirectory(dr_libs)
add_subdirectory(cli)
add_subdirectory(gui)