set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" OR MAKE_CXX_SIMULATE_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "/EHsc")
    set(CMAKE_CXX_FLAGS_DEBUG "/MDd /Od /Zi")
    set(CMAKE_CXX_FLAGS_RELEASE "/MD /Ob2 /Oi /Os /Oy /DNDEBUG")
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MD /Ob2 /Oi /Os /Oy /Zi")
elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    set(CMAKE_CXX_FLAGS "-Wall -Wno-sign-compare -fno-math-errno")
    set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -g0 -flto -ftree-vectorize -DNDEBUG")
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")

    include(CheckLinkerFlag)
    check_linker_flag(CXX "-fuse-ld=lld" can_use_lld)
    if(can_use_lld)
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fuse-ld=lld")
    endif()
else()
    message(AUTHOR_WARNING "This compiler (${CMAKE_CXX_COMPILER_ID}) will use CMake's own default compile flags")
endif()

if(NOT CMAKE_BUILD_TYPE)
    message(STATUS "CMAKE_BUILD_TYPE was not set: defaults to RelWithDebInfo")
    set(CMAKE_BUILD_TYPE RelWithDebInfo)
endif()

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    add_compile_definitions(WIN32 _USE_MATH_DEFINES)
endif()

string(TOUPPER ${CMAKE_BUILD_TYPE} _flags_var_suffix)
message(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS_${_flags_var_suffix}} ${CMAKE_CXX_FLAGS}")

add_subdirectory(3rdparty)
add_subdirectory(suanshu)
add_subdirectory(babblesynth)
add_subdirectory(cli)
add_subdirectory(gui)

if(USE_ASAN)
    target_compile_options(babblesynth PRIVATE -fsanitize=address)
    target_compile_options(babblesynth-gui PRIVATE -fsanitize=address)
    target_link_options(babblesynth PRIVATE -fsanitize=address)
    target_link_options(babblesynth-gui PRIVATE -fsanitize=address)
endif()

if(USE_USAN)
    target_compile_options(babblesynth PRIVATE -fsanitize=undefined)
    target_compile_options(babblesynth-gui PRIVATE -fsanitize=undefined)
    target_link_options(babblesynth PRIVATE -fsanitize=undefined)
    target_link_options(babblesynth-gui PRIVATE -fsanitize=undefined)
endif()